# dart-fss-extractor

./: .gitignore  CLAUDE.md  export_v2_excel.py  justfile  pyproject.toml  rebuild_repository.py  run_daily.bat  test_toml_config.py
.agent/: agents.md
config/: account_keywords.toml
scripts/: migrate_db_to_calendar_period.py
src/: cli.py  daily_scheduler.py  export_v2_excel.py  main.py  update_missing_data.py
src/core/domain/models/: amount.py  collection_progress.py  company.py  financial_statement.py  performance_metrics.py
src/core/ports/: cache_port.py  corp_code_port.py  download_port.py  export_port.py  file_reader_port.py  financial_statement_port.py  repository_port.py  storage_port.py
src/core/services/: daily_collection_service.py  data_processing_service.py  financial_collection_service.py  financial_data_export_service.py  incremental_update_service.py
src/infra/adapters/: corp_code_adapter.py  dart_download_adapter.py  dart_financial_adapter.py  dart_response_parser.py  excel_export_adapter.py  local_file_reader_adapter.py  local_storage_adapter.py  parquet_repository_adapter.py
src/infra/adapters/sqlite/: schema.py  sqlite_repository_adapter.py
src/infra/adapters/storage/: google_drive_adapter.py  json_cache_adapter.py
test_data/repo_e2e/financial_data_raw/: 00126380.parquet  00126380_meta.json  00164779.parquet  00164779_meta.json
tests/e2e/: test_financial_collection_e2e.py
tests/fixtures/data/: target_companies.csv
tests/fixtures/test_data/: stock_list.csv
tests/integration/: test_adapter_integration.py  test_dart_download_adapter.py
tests/unit/core/models/: test_amount.py  test_domain_rich_behavior.py
tests/unit/core/services/: test_daily_collection_service.py  test_data_processing_config.py  test_data_processing_service.py  test_data_processing_service_v2.py  test_financial_collection_logic.py  test_financial_collection_service.py  test_incremental_update_service.py
tests/unit/infra/adapters/: test_corp_code_adapter.py  test_dart_financial_adapter.py  test_dart_response_parser.py  test_excel_export_adapter.py  test_local_storage_adapter.py  test_sqlite_repository_adapter.py
