[project]
name = "dart-fss-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dart-fss>=0.4.14",
    "dotenv>=0.9.9",
    "google-api-python-client>=2.197.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "openpyxl>=3.1.5",
    "pyarrow>=23.0.0",
    "pydantic>=2.13.4",
    "pytest>=9.0.1",
    "xlsxwriter>=3.2.9",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
dart-extractor = "main:main"
dart-export-excel = "export_v2_excel:export_v2_integrated"
dart-update-missing = "update_missing_data:main"

[tool.setuptools.packages.find]
# src 디렉터리 하위의 모든 패키지를 자동으로 찾도록 설정
where = ["src"]

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/daily_scheduler.py",
    "src/export_v2_excel.py",
    "src/main.py",
    "src/update_missing_data.py",
]

[tool.coverage.report]
show_missing = true
